--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "flatmap-stream": "0.0.1-security",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.10",
     "passport": "^0.4.0",
